[gd_scene load_steps=3 format=3 uid="uid://dw1i620q5rg3f"]

[ext_resource type="Script" path="res://scripts/card_details_adress.gd" id="1_cj74e"]
[ext_resource type="Texture2D" uid="uid://c70kgdtiq3sru" path="res://test_data/dog.jpg" id="2_qxo77"]

[node name="CardDetailsAdress" type="PanelContainer"]
offset_left = 17.0
offset_top = 25.0
offset_right = 366.0
offset_bottom = 621.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_cj74e")
metadata/_edit_vertical_guides_ = [98.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Deletar"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Fechar"

[node name="ImageRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_qxo77")
expand_mode = 2
stretch_mode = 5

[node name="EditImageButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Upload Image"

[node name="DisplayContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5
columns = 2

[node name="Padding" type="Control" parent="MarginContainer/VBoxContainer/DisplayContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Padding2" type="Control" parent="MarginContainer/VBoxContainer/DisplayContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="StateLabel" type="Label" parent="MarginContainer/VBoxContainer/DisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Estado:"
horizontal_alignment = 2
clip_text = true

[node name="StateValue" type="Label" parent="MarginContainer/VBoxContainer/DisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "NameName"
clip_text = true

[node name="CityLabel" type="Label" parent="MarginContainer/VBoxContainer/DisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Cidade:"
horizontal_alignment = 2
clip_text = true

[node name="CityValue" type="Label" parent="MarginContainer/VBoxContainer/DisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "00000000000"
clip_text = true

[node name="StreetNameLabel" type="Label" parent="MarginContainer/VBoxContainer/DisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Nome da Rua:"
horizontal_alignment = 2
clip_text = true

[node name="StreetNameValue" type="Label" parent="MarginContainer/VBoxContainer/DisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "55 88888888"
clip_text = true

[node name="NumberLabel" type="Label" parent="MarginContainer/VBoxContainer/DisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Número:"
horizontal_alignment = 2
clip_text = true

[node name="NumberValue" type="Label" parent="MarginContainer/VBoxContainer/DisplayContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 11
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "55 88888888"
clip_text = true

[node name="EditContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5
columns = 2

[node name="Padding" type="Control" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Padding2" type="Control" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Estado:"
horizontal_alignment = 1
clip_text = true

[node name="EditStateValue" type="LineEdit" parent="MarginContainer/VBoxContainer/EditContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Estado"
max_length = 64

[node name="CpfLabel" type="Label" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Cidade:"
horizontal_alignment = 1
clip_text = true

[node name="EditCityValue" type="LineEdit" parent="MarginContainer/VBoxContainer/EditContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Cidade"
max_length = 64

[node name="TelephoneLabel" type="Label" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Nome da Rua:"
horizontal_alignment = 1
clip_text = true

[node name="EditStreetNameValue" type="LineEdit" parent="MarginContainer/VBoxContainer/EditContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Nome da Rua"
max_length = 64

[node name="TelephoneLabel2" type="Label" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Número:"
horizontal_alignment = 1
clip_text = true

[node name="EditNumberSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/EditContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
alignment = 1

[node name="padding" type="Control" parent="MarginContainer/VBoxContainer/EditContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Save"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Cancel"

[node name="EditButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Editar"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EditImageButton" to="." method="_on_edit_image_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
